--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ir.cafebabe.math.utils</groupId>
     <artifactId>bigdecimal-utils</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <maven.javadoc.skip>true</maven.javadoc.skip>
