--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ir.cafebabe.math.utils</groupId>
     <artifactId>bigdecimal-utils</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -15,7 +15,7 @@
         <url>https://github.com/mortezaadi/bigdecimal-utils</url>
         <connection>scm:git://github.com/mortezaadi/bigdecimal-utils.git</connection>
         <developerConnection>scm:git:git@github.com:mortezaadi/bigdecimal-utils.git</developerConnection>
-        <tag>bigdecimal-utils-1.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
