[maven-release-plugin] prepare release bigdecimal-utils-1.2

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ir.cafebabe.math.utils</groupId>
     <artifactId>bigdecimal-utils</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
 
     <licenses>
         <license>
@@ -16,7 +15,7 @@
         <url>https://github.com/mortezaadi/bigdecimal-utils</url>
         <connection>scm:git://github.com/mortezaadi/bigdecimal-utils.git</connection>
         <developerConnection>scm:git:git@github.com:mortezaadi/bigdecimal-utils.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>bigdecimal-utils-1.2</tag>
     </scm>
 
     <developers>
